--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
     <!-- tailwind and daisyui cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome cdn -->
+    <script src="https://kit.fontawesome.com/d7b7563d24.js" crossorigin="anonymous"></script>
     <!-- google font font-family manrope link-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
     <style>
       .font-manrope {
         font-family: "Manrope", sans-serif;
@@ -18,6 +31,28 @@
     </style>
   </head>
   <body class="font-manrope">
-    
+    <!-- header start here -->
+    <header>
+      <div class="hero">
+        <div class="hero-content flex-col lg:flex-row">
+          <div>
+            <h1 class="text-7xl font-bold">It's good tea time at The Tea House</h1>
+            <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button class="btn btn-primary">Explore More</button>
+          </div>
+          <div>
+            <div><img src="./images/banner.png" class="max-w-sm rounded-lg" /></div>
+            <div class="shadow-2xl p-5 bg-white rounded-md w-60">
+              <h3 class="text-3xl font-extrabold"><i class="fa-solid fa-star px-3 text-amber-400"></i> 5.00</h3>
+              <p class="text-base font-semibold">Trust Pilot Ratings</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- main start here -->
+    <main></main>
+    <!-- footer start here -->
+    <footer></footer>
   </body>
 </html>
