--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -42,7 +42,7 @@
           </div>
           <div>
             <div><img src="./images/banner.png" class="max-w-sm rounded-lg" /></div>
-            <div class="shadow-2xl p-5 bg-white rounded-md w-60">
+            <div class="-mt-16 drop-shadow-lg p-5 bg-white rounded-md w-60">
               <h3 class="text-3xl font-extrabold"><i class="fa-solid fa-star px-3 text-amber-400"></i> 5.00</h3>
               <p class="text-base font-semibold">Trust Pilot Ratings</p>
             </div>
@@ -51,7 +51,54 @@
       </div>
     </header>
     <!-- main start here -->
-    <main></main>
+    <main class="container mx-auto">
+      <!-- feature product section start here -->
+      <section class="text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-6">Our Featured Products</h2>
+        <p class="lg:max-w-4xl mx-auto">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem qui doloremque iusto, voluptates sunt, dolor
+          tenetur rerum nihil voluptas nemo soluta deleniti aliquid ea optio.
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-12">
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+            <figure>
+              <img src="./images/tea-2.png" alt="Tea" />
+            </figure>
+            <div class="card-body lg:text-center">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+            <figure>
+              <img src="./images/tea-3.png" alt="Tea" />
+            </figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Black Tea</h2>
+              <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+            <figure>
+              <img src="./images/tea-1.png" alt="Tea" />
+            </figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Lemon Tea</h2>
+              <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+            <figure>
+              <img src="./images/tea-4.png" alt="Tea" />
+            </figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Green Tea</h2>
+              <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer start here -->
     <footer></footer>
   </body>
